tests/urmoac/input/wkt/errors/polygons_missing_id/sources.wkt
#id;pos;[var]
;POLYGON((-240 -10, -260 -10, -260 10, -240 10, -240 -10))
